--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mocha-multi": "1.0.1"
   },
   "dependencies": {
-    "babel-upgrade": "0.0.24"
+    "babel-upgrade": "0.0.24",
+    "learn": "^0.1.5"
   }
 }
